--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   background-image: url("../assests/Variant9.png");
+  transition: background-color 1s ease-in-out, color 1s ease-in-out;
+  scroll-behavior: smooth;
 }
 
 @layer utilities {
